--- a/02350AdvancedDemo/02350AdvancedDemo/Themes/ShinyBlue.xaml
+++ b/02350AdvancedDemo/02350AdvancedDemo/Themes/ShinyBlue.xaml
@@ -1858,7 +1858,8 @@
 
     <DropShadowBitmapEffect x:Key="PopupDropShadow" ShadowDepth="1.5" Softness="0.15"/>
 
-    <Style TargetType="{x:Type MenuItem}">
+    <!-- Custom (02350 Demo) -->
+    <!--<Style TargetType="{x:Type MenuItem}">
         <Setter Property="HorizontalContentAlignment" Value="{Binding Path=HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
         <Setter Property="VerticalContentAlignment" Value="{Binding Path=VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
         <Setter Property="Background" Value="Transparent"/>
@@ -1975,7 +1976,7 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
+    </Style>-->
 
     <Style TargetType="{x:Type Separator}">
         <Setter Property="Height" Value="1"/>
@@ -3205,5 +3206,4 @@
             </Setter.Value>
         </Setter>
     </Style>
-
 </ResourceDictionary>
