--- a/02350AdvancedDemo/02350AdvancedDemo/View/App.xaml
+++ b/02350AdvancedDemo/02350AdvancedDemo/View/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="_02350AdvancedDemo.View.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:View="clr-namespace:_02350AdvancedDemo.View"
              xmlns:ViewModel="clr-namespace:_02350AdvancedDemo.ViewModel"
              StartupUri="MainWindow.xaml">
@@ -9,6 +10,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Themes/ShinyBlue.xaml"/>
                 <ResourceDictionary>
+                    <ViewModel:ViewModelLocator x:Key="Locator" />
                     <DataTemplate DataType="{x:Type ViewModel:CircleViewModel}">
                         <Canvas>
                             <View:CircleUserControl/>
